2010-01-13  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Don't crash in access rights editing on empty menu titles.

2010-01-12  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/configui.py:
	Only save options present in the updated row in the config form.

2010-01-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Use empty string as embed binding title (None is not valid anymore).

2010-01-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Use the new order of `Binding' arguments (fixed).

2010-01-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Use the new order of `Binding' arguments.

2010-01-06  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	New db function pytis_user and its use in DMP.

2010-01-05  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	* lib/pytis/data/postgresql.py:
	* lib/pytis/form/form.py:
	Fix performance problems when filtering side forms bound by arguments.

2010-01-05  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Use specification instances instead of classes everywhere in genmenu.
	
	This change makes genmenu much more sensitive to errors in specifications.
	Careful testing should be performed before genmenu results are applied!
	

2010-01-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Define public/private specifications.

2009-12-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Don't crash in pytis_compute_summary_rights when unknown shortname is given.

2009-12-10  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* lib/pytis/extensions/defs.py:
	Warn about inappropriate codebook rights in DMP editing.

2009-12-10  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* lib/pytis/extensions/defs.py:
	Check for invalid codebook rights in specification checking.

2009-12-10  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/extensions/defs.py: